--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@ http://www.templatemo.com/tm-497-upper
                                     <a class="nav-link" href="#0" data-no="1">Home <span class="sr-only">(current)</span></a>
                                 </li>                                
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#0" data-no="2">First Gallery</a>
+                                    <a class="nav-link" href="#0" data-no="2">Primeira Galeria</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#0" data-no="3">Second</a>
+                                    <a class="nav-link" href="#0" data-no="3">Segunda</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#0" data-no="4">Third Grid</a>
+                                    <a class="nav-link" href="#0" data-no="4">Terceira Galeria</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#0" data-no="5">About Us</a>
+                                    <a class="nav-link" href="#0" data-no="5">Sobre Nós</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#0" data-no="6">Contact</a>
